--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,8 @@
 # MongoDB Configuration
-MONGODB_URI=mongodb+srv://b3dsign_db_user:yxHxBDi0ES9Y5bZI@clusterartee.qls1nqf.mongodb.net/?retryWrites=true&w=majority&appName=ClusterArtee
+MONGODB_URI=mongodb+srv://b3dsign_db_user:yxHxBDi0ES9Y5bZI@clusterartori.qls1nqf.mongodb.net/?retryWrites=true&w=majority&appName=ClusterArtori
 
 # JWT Configuration
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production-2024-artee-app-secure-random-string
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production-2024-artori-app-secure-random-string
 JWT_ALGORITHM=HS256
 JWT_EXPIRES_IN_MINUTES=30
 
