fix: correct Vercel Python runtime format from python@3.9 to python3.9
- Changed runtime specification from 'python@3.9' to 'python3.9' to match Vercel's expected format
- Added additional rewrites for healthz and root endpoints to ensure proper routing
- Resolves deployment error: 'Function Runtimes must have a valid version'

--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,20 @@
 {
   "functions": {
     "backend/main.py": {
-      "runtime": "python@3.9"
+      "runtime": "python3.9"
     }
   },
   "rewrites": [
     {
       "source": "/api/v1/(.*)",
+      "destination": "/backend/main.py"
+    },
+    {
+      "source": "/healthz",
+      "destination": "/backend/main.py"
+    },
+    {
+      "source": "/",
       "destination": "/backend/main.py"
     }
   ]
