fix: restructure for Vercel Functions compatibility
- Remove explicit runtime configuration from vercel.json (Vercel auto-detects Python)
- Create /api/index.py as Vercel Function handler following Vercel conventions
- Add requirements.txt in /api directory for function dependencies
- Update rewrites to point to /api/index.py instead of backend/main.py
- Resolves 'Function Runtimes must have a valid version' deployment error

This follows Vercel's current Python Functions documentation where:
- Functions are placed in /api directory
- Runtime is auto-detected from file extension
- Dependencies are specified via requirements.txt in function directory

--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,16 @@
 {
-  "functions": {
-    "backend/main.py": {
-      "runtime": "python3.9"
-    }
-  },
   "rewrites": [
     {
       "source": "/api/v1/(.*)",
-      "destination": "/backend/main.py"
+      "destination": "/api/index.py"
     },
     {
       "source": "/healthz",
-      "destination": "/backend/main.py"
+      "destination": "/api/index.py"
     },
     {
       "source": "/",
-      "destination": "/backend/main.py"
+      "destination": "/api/index.py"
     }
   ]
 }
