fix: add frontend build configuration to vercel.json
- Add buildCommand to install dependencies and build frontend
- Set outputDirectory to frontend/dist for proper static file serving
- Add installCommand to ensure pnpm dependencies are installed
- Resolves frontend build error: 'vite: command not found' and missing node_modules

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,7 @@
 {
+  "buildCommand": "cd frontend && pnpm install && pnpm run build",
+  "outputDirectory": "frontend/dist",
+  "installCommand": "cd frontend && pnpm install",
   "rewrites": [
     {
       "source": "/api/v1/(.*)",
