--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
       "destination": "/api/index.py"
     },
     {
-      "source": "/",
+      "source": "/api/(.*)",
       "destination": "/api/index.py"
     }
   ]
