Fix Vercel deployment errors for frontend configuration
- Update frontend package.json with proper build configuration
- Configure .npmrc for package manager compatibility
- Resolve deployment issues for both backend and frontend components

--- a/frontend/.npmrc
+++ b/frontend/.npmrc
@@ -1,2 +1,16 @@
-lockfile-version=6
+# Vercel-optimized configuration
 registry=https://registry.npmjs.org/
+
+# Network optimizations for Vercel
+network-timeout=300000
+fetch-retries=5
+fetch-retry-factor=10
+fetch-retry-mintimeout=10000
+fetch-retry-maxtimeout=60000
+
+# Prevent network errors
+strict-ssl=true
+prefer-offline=false
+
+# Logging for debugging
+loglevel=info
