--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,9 @@
-fastapi
-uvicorn
+fastapi==0.68.0
+uvicorn==0.15.0
 pymongo
 python-dotenv
 passlib==1.7.4
-bcrypt==3.2.0
+bcrypt==4.0.1
+pydantic[email]==1.8.2
 python-jose[cryptography]
 email-validator
