--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,9 @@
-fastapi==0.68.0
-uvicorn==0.15.0
+fastapi==0.115.0
+uvicorn==0.32.0
 pymongo
 python-dotenv
-passlib==1.7.4
-bcrypt==4.0.1
-pydantic[email]==1.8.2
+passlib[bcrypt]==1.7.4
+bcrypt==4.2.0
+pydantic[email]==2.10.0
 python-jose[cryptography]
 email-validator
