--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
+  },
+  "dependencies": {
+    "axios": "^1.12.2",
+    "react-router-dom": "^7.9.3"
   }
 }
