--- a/package.json
+++ b/package.json
@@ -7,16 +7,22 @@
   "scripts": {
     "install:frontend": "npm install --prefix frontend",
     "install:backend": "python3 -m venv backend/venv && backend/venv/bin/pip install -r backend/requirements.txt",
-    "install": "npm run install:frontend && npm run install:backend",
     "dev:frontend": "npm run dev --prefix frontend",
     "dev:backend": "backend/venv/bin/python3 backend/main.py",
     "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\""
   },
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "@types/react": "^19.2.0",
+    "@types/react-dom": "^19.2.0",
+    "autoprefixer": "^10.4.21",
+    "concurrently": "^8.2.2",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.14"
   },
   "dependencies": {
     "axios": "^1.12.2",
-    "react-router-dom": "^7.9.3"
+    "clsx": "^2.1.1",
+    "react-router-dom": "^7.9.3",
+    "tailwind-merge": "^3.3.1"
   }
 }
