--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,6 +1,9 @@
-fastapi
-uvicorn
+fastapi==0.115.0
+uvicorn==0.32.0
 pymongo
 python-dotenv
-passlib[bcrypt]
+passlib[bcrypt]==1.7.4
+bcrypt==4.2.0
+pydantic[email]==2.10.0
 python-jose[cryptography]
+email-validator
