--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 # MongoDB Configuration
-MONGODB_URI=mongodb+srv://b3dsign_db_user:yxHxBDi0ES9Y5bZI@cluster0.z8xjon4.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://b3dsign_db_user:yxHxBDi0ES9Y5bZI@cluster0.z8xjon4.mongodb.net/artori?retryWrites=true&w=majority&appName=Cluster0&ssl=true&tlsAllowInvalidCertificates=false
 
 # JWT Configuration
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production-2024-artori-app-secure-random-string
