--- a/backend/.env
+++ b/backend/.env
@@ -6,4 +6,6 @@ JWT_SECRET=your-super-secret-jwt-key-change-this-in-production-2024-artori-app-s
 JWT_ALGORITHM=HS256
 JWT_EXPIRES_IN_MINUTES=30
 
+# OpenAI Configuration
+OPENAI_API_KEY=your-openai-api-key-here
 
