Fix critical production login issue
- Remove VITE_API_URL from backend/.env to allow frontend conditional logic
- Frontend will now use /api/v1 in production instead of localhost:8000
- Fix logger initialization order in backend/main.py
- Tested locally: login, API endpoints, and AI service all working correctly

This resolves the production login failures caused by frontend trying to connect to localhost instead of production API.

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ MONGODB_URL=mongodb://localhost:27017/artori
 
 # JWT Configuration
 JWT_SECRET=your-super-secret-jwt-key-here
+JWT_ALGORITHM=HS256
 JWT_EXPIRES_IN_MINUTES=60
 
 # OpenAI Configuration (for AI features)
@@ -13,3 +14,6 @@ ENVIRONMENT=production
 
 # CORS Configuration
 ALLOWED_ORIGINS=https://artori.app,http://localhost:3000
+
+# Frontend Configuration
+VITE_API_URL=https://your-api-domain.vercel.app
