feat: Implement RAG-powered AI tutor and fix login/i18n bugs

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,12 @@ JWT_EXPIRES_IN_MINUTES=60
 # OpenAI Configuration (for AI features)
 OPENAI_API_KEY=your-openai-api-key-here
 
+# ChromaDB Cloud Configuration (for production)
+# Leave empty for local development (uses local persistent storage)
+CHROMA_API_KEY=your-chromadb-api-key-here
+CHROMA_TENANT=your-chromadb-tenant-id-here
+CHROMA_DATABASE=artori
+
 # Environment
 ENVIRONMENT=production
 
