--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,3 +9,10 @@ python-jose[cryptography]
 email-validator
 openai>=1.0.0
 mangum==0.19.0
+langchain==0.1.0
+langchain-openai==0.0.5
+langchain-community==0.0.10
+chromadb>=0.5.0
+sentence-transformers==2.2.2
+pypdf==3.17.4
+python-docx==1.1.0
